kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  labels:
    name: home-ingress
spec:
  rules:
  - host: www.samsplace.in
    http:
     paths:
     - pathType: Prefix
       path: "/"
       backend:
         service:
           name: home-app
           port: 
             number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobile-app
  labels:
    name: mobile-ingress
spec:
  rules:
  - host: www.samsplace.in
    http:  
      paths:
      - pathType: Prefix
        path: "/mobile"
        backend:
          service:
            name: mobile-app
            port: 
              number: 80
